# video2text

./: .gitignore  README.md  app.py  config.py  my_story.json  my_story.md  pyproject.toml  requirements-observability.txt  requirements.txt  scene_detector.py  story_from_theme.py  storyboard.json  storyboard.md  video2text.py  video_analyzer.py  video_composer.py  video_generator.py  wan_video_http.py
cli/: __init__.py  _bootstrap.py  main.py
data/config/: config.example.json
deploy/otel/: collector.config.example.yaml
docs/: observability.md
src/video2text/: __init__.py  cli.py
src/video2text/config/: __init__.py  settings.py
src/video2text/core/: __init__.py  analyzer.py  dialogue_parser.py  ip_creator.py  ip_manager.py  scene_detector.py  storyboard.py  styles.py  theme.py  voices.py
src/video2text/pipeline/: __init__.py  audio_align.py  composer.py  generator.py
src/video2text/services/: __init__.py  image_gen.py  media_normalize.py  tts.py  wan_video.py
src/video2text/utils/: __init__.py  paths.py
src/video2text/web/: __init__.py  app.py  bp_ip.py  telemetry.py
src/video2text/web/auth/: __init__.py  auth.py
static/: app.js  index.html  login.html  style.css
tests/: test_config.py  test_story_from_theme.py  test_storyboard.py  test_video_generator.py
