[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video2text"
version = "0.1.0"
description = "视频分镜脚本与万相再生成"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
v2t = "video2text.cli:cli"
v2t-web = "video2text.web.app:main"
